git-svn-id: http://svn.vdombox.ru/flextools/trunk@3393 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.01/src/ContextWindows/AddLanguageWindow.mxml
+++ b/TypeEditor/v.01/src/ContextWindows/AddLanguageWindow.mxml
@@ -3,6 +3,7 @@
 	verticalScrollPolicy="off" horizontalScrollPolicy="off"
 	borderAlpha="0.95" cornerRadius="1" width="250" height="150"
 	shadowDirection="right"	borderColor="#636363" titleStyleName="title"
+	borderThicknessLeft="1" borderThicknessRight="1"
 	title="Add Object Language" verticalGap="15" creationComplete="{onCreationComplete();}">
 	
 	<mx:RegExpValidator 
