--- a/TypeEditor/v.01/src/ContextWindows/MultiLineEditor.mxml
+++ b/TypeEditor/v.01/src/ContextWindows/MultiLineEditor.mxml
@@ -4,7 +4,7 @@
 	borderAlpha="0.95" cornerRadius="1" width="250" height="150"
 	shadowDirection="right"	borderColor="#636363" titleStyleName="title"
 	borderThicknessLeft="1" borderThicknessRight="1"
-	title="TextField Length Editor" verticalGap="15" creationComplete="{onCreationComplete();}">
+	title="MultiLine Length Editor" verticalGap="15" creationComplete="{onCreationComplete();}">
 	
 	<mx:RegExpValidator 
 		source="{__length}" property="text" expression="^[0-9]\{1,5\}$"
@@ -18,7 +18,7 @@
 	</mx:Style>
 
 	<mx:VBox verticalGap="0" width="100%">
-		<mx:Label text="Enter TextField Length:" />
+		<mx:Label text="Enter MultiLine Length:" />
 		<mx:TextInput id="__length" width="100%" cornerRadius="1" text="100" />
 	</mx:VBox>
 
@@ -32,7 +32,7 @@
 			import mx.controls.Alert;
 			import mx.managers.PopUpManager;
 			
-			public var textFieldLength:int = 0;
+			public var multiLineLength:int = 0;
 			private var validNumber:Boolean = true;
 			
 			private function onCreationComplete():void {
@@ -50,7 +50,7 @@
 			
 			public function onShow():void
 			{
-				__length.text = String(textFieldLength);
+				__length.text = String(multiLineLength);
 				__length.setFocus();
 			}
 		
@@ -58,7 +58,7 @@
 			{
 				__applyBtn.setFocus();
 				if (validNumber) {
-					textFieldLength = int(__length.text);
+					multiLineLength = int(__length.text);
 					this.dispatchEvent(new Event(Event.COMPLETE));
 				} else {
 					__length.setFocus();
