--- a/TypeEditor/v.01/src/ContextWindows/NumberRangeEditor.mxml
+++ b/TypeEditor/v.01/src/ContextWindows/NumberRangeEditor.mxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" layout="vertical"
 	verticalScrollPolicy="off" horizontalScrollPolicy="off"
-	borderAlpha="0.95" cornerRadius="1" width="250" height="150"
+	borderAlpha="0.95" cornerRadius="1" width="250" height="180"
 	shadowDirection="right"	borderColor="#636363" titleStyleName="title"
 	borderThicknessLeft="1" borderThicknessRight="1"
-	title="TextField Length Editor" verticalGap="15" creationComplete="{onCreationComplete();}">
-	
-	<mx:RegExpValidator 
-		source="{__length}" property="text" expression="^[0-9]\{1,5\}$"
-		required="true" valid="{validNumber = true;}" invalid="{validNumber = false;}" />
+	title="Number Range Editor" verticalGap="15" creationComplete="{onCreationComplete();}">
 	
 	<mx:Style>
 		.title {
@@ -18,8 +14,11 @@
 	</mx:Style>
 
 	<mx:VBox verticalGap="0" width="100%">
-		<mx:Label text="Enter TextField Length:" />
-		<mx:TextInput id="__length" width="100%" cornerRadius="1" text="100" />
+		<mx:Label text="Enter bottom low value:" />
+		<mx:TextInput id="__minValue" width="100%" cornerRadius="1" text="100" />
+		<mx:Spacer height="2" />
+		<mx:Label text="Enter top high value:" />
+		<mx:TextInput id="__maxValue" width="100%" cornerRadius="1" text="100" />
 	</mx:VBox>
 
 	<mx:HBox verticalGap="0" width="100%" horizontalAlign="center" height="100%" verticalAlign="bottom">
@@ -32,10 +31,11 @@
 			import mx.controls.Alert;
 			import mx.managers.PopUpManager;
 			
-			public var textFieldLength:int = 0;
-			private var validNumber:Boolean = true;
+			public var numberMinValue:Number = 0;
+			public var numberMaxValue:Number = 0;
 			
-			private function onCreationComplete():void {
+			private function onCreationComplete():void
+			{
 				this.addEventListener(KeyboardEvent.KEY_DOWN, keyDownHandler_); 
 			}
 			
@@ -50,20 +50,22 @@
 			
 			public function onShow():void
 			{
-				__length.text = String(textFieldLength);
-				__length.setFocus();
+				__minValue.text = String(numberMinValue);
+				__maxValue.text = String(numberMaxValue);
+				__minValue.setFocus();
 			}
 		
 			private function applyBtnClickHandler():void
 			{
 				__applyBtn.setFocus();
-				if (validNumber) {
-					textFieldLength = int(__length.text);
-					this.dispatchEvent(new Event(Event.COMPLETE));
-				} else {
-					__length.setFocus();
-					Alert.show('Invalid number!', 'Error');
+				numberMinValue = Number(__minValue.text);
+				numberMaxValue = Number(__maxValue.text);
+				
+				if (numberMinValue > numberMaxValue || isNaN(numberMinValue) || isNaN(numberMaxValue)) {
+					Alert.show('Check numbers!', 'Error');
+					return;
 				}
+				this.dispatchEvent(new Event(Event.COMPLETE));
 			}
 			
 			private function cancelBtnClickHandler():void
