Rename air file (Vdom -> VdomIDE)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@3463 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/VdomIDE.mxml
+++ b/IDE/Vdom/VdomIDE.mxml
@@ -18,7 +18,7 @@
 	verticalScrollPolicy="off"
 	creationPolicy="all">
 	
-	<mx:Script source="vdom.as"/>
+	<mx:Script source="vdomIDE.as"/>
 	
 	<mx:Metadata>
 		[ResourceBundle("Application")]
