--- a/TypeEditor/v.01/src/ContextWindows/ExternaleditorEditor.mxml
+++ b/TypeEditor/v.01/src/ContextWindows/ExternaleditorEditor.mxml
@@ -22,7 +22,7 @@
 			
 			private const EMPTY_STR:String = '[[ empty ]]';
 			public var selectedLang:String = '';;
-			private var titleProvider:Array = []; /* of Langstr = str */
+			public var titleProvider:Array = []; /* of Langstr = str */
 			[Bindable] private var _langsProvider:Array = [];
 
 
