Add default type icon if resource not found FileManager return null if resource not found
git-svn-id: http://svn.vdombox.ru/flextools/trunk@3493 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/_src/theme/css/default.css
+++ b/IDE/v.01/_src/theme/css/default.css
@@ -7,6 +7,8 @@ global {
 	topLDownRCursor: Embed(source="vdomTheme.swf", symbol="ResizeCursorTopLDownR");
 	topRDownLCursor: Embed(source="vdomTheme.swf", symbol="ResizeCursorTopRDownL");
 	
+	defaultTypeIcon: Embed("default_type_icon.png");
+	
 	appIconPersonalPages: Embed("app-personalpages.png");
 	appIconAssociation: Embed("app-association.png");
 	appIconBuild: Embed("app-build.png");
