--- a/IDE/v.01/vdom/components/edit/Edit.mxml
+++ b/IDE/v.01/vdom/components/edit/Edit.mxml
@@ -38,7 +38,7 @@
 			
 		</containers:AdvancedTabNavigator>
 	
-	<mx:VBox id="panelContainer"
+	<mx:VDividedBox id="panelContainer"
 		paddingRight="2" width="220" minWidth="220"
 		verticalGap="5" 
 		verticalScrollPolicy="auto" horizontalScrollPolicy="off"  >
@@ -56,7 +56,7 @@
 			<mx:Text htmlText="{attributesPanel.help}" condenseWhite="true" width="100%" minHeight="0"/>
 		</containers:ClosablePanel>
 		
-		<editContainers:ObjectsPanel id="pageList" 
-			title="{resourceManager.getString('Edit','pages_title')}" y="50" width="100%" /> 							
-	</mx:VBox>
+		<editContainers:ObjectsPanel id="pageList"
+			title="{resourceManager.getString('Edit','pages_title')}" y="50" width="100%"  height="100%"/> 							
+	</mx:VDividedBox>
 </mx:HDividedBox>
