--- a/IDE/v.01/vdom/containers/ApplicationInformation.mxml
+++ b/IDE/v.01/vdom/containers/ApplicationInformation.mxml
@@ -25,7 +25,7 @@
 			private var _source:Object;
 			
 			private var defaultImage:Class =
-				Application.application.getStyle('appIconPersonalPages');
+				Application.application.getStyle("appIconPersonalPages");
 			
 			public function set dataProvider(value:XML):void
 			{
@@ -43,13 +43,21 @@
 				else
 				{
 					var fileManager:FileManager = FileManager.getInstance();
-					fileManager.loadResource(value.Id, value.Icon, applicationIcon, 'source', true);
+					fileManager.loadResource(value.Id, value.Icon, this, "resource", true);
 				}
+			}
+			
+			public function set resource( value : Object ) : void
+			{
+				if( value )
+					_source = value;
+				else
+					_source = defaultImage;
 			}
 		]]>
 	</mx:Script>
 	<mx:Canvas width="60" height="60" styleName="thumb" top="3">
-		<mx:Image id="applicationIcon" source="{_source}"
+		<mx:Image id="applicationIcon" source="{ _source }"
 			width="50" height="50" horizontalCenter="0" verticalCenter="0"/>
 	</mx:Canvas>
 	
