git-svn-id: http://svn.vdombox.ru/flextools/trunk@3496 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.01/src/ContextWindows/DropDownMenuEditor.mxml
+++ b/TypeEditor/v.01/src/ContextWindows/DropDownMenuEditor.mxml
@@ -185,11 +185,11 @@
 	</mx:DataGrid>
 	
 	<mx:HBox width="100%" horizontalGap="4" horizontalAlign="center">
-		<mx:Button label="Add" click="{addNewRowBtnClickHandler();}" />
-		<mx:Button label="Remove" click="{removeRowBtnClickHandler();}" />
+		<mx:Button label="Add" click="{addNewRowBtnClickHandler();}" icon="@Embed('/icons/list-add.png')" />
+		<mx:Button label="Remove" click="{removeRowBtnClickHandler();}" icon="@Embed('/icons/list-remove.png')" />
 		<mx:Spacer width="100%" />
-		<mx:Button label="Ok" click="{okBtnClickHandler();}" />
-		<mx:Button label="Cancel" click="{PopUpManager.removePopUp(this);}" />
+		<mx:Button label="Ok" click="{okBtnClickHandler();}" icon="@Embed('/icons/commit.png')" />
+		<mx:Button label="Cancel" click="{PopUpManager.removePopUp(this);}" icon="@Embed('/icons/discard.png')" />
 	</mx:HBox>
 	
 	
