--- a/Help/Reader/v.01/src/VdomHelp.mxml
+++ b/Help/Reader/v.01/src/VdomHelp.mxml
@@ -21,7 +21,6 @@
 			myLoader = new URLLoader(myXMLURL);
 			myLoader.addEventListener(Event.COMPLETE, startXMLLoaded);
 			myLoader.addEventListener(IOErrorEvent.IO_ERROR, startXMLLoaded);
-			
 		}
 		
 		// 
@@ -30,16 +29,16 @@
 			myLoader.removeEventListener(Event.COMPLETE, startXMLLoaded);
 			if(event.type == IOErrorEvent.IO_ERROR)
 			{
-				trace("Start XML not Finded")	
+				trace("!!!!!!!!!!!!!! Start XML not Finded !!!!!!!!!")	
 			} 
 			else if(event.type == Event.COMPLETE)
 			{
-			    trace("Start loaded.");
+//			    trace("Start loaded.");
 				 
 				install = XML(myLoader.data);
 				for each(var product:XML in install.children())
 				{
-					trace(product.@url);
+//					trace(product.@url);
 					var xmlURL:URLRequest = new URLRequest(product.@url)
 					var loader:URLLoader = new URLLoader(xmlURL);
 					loader.addEventListener(Event.COMPLETE, xmlLoaded);
@@ -56,7 +55,7 @@
 			} 
 			else if(event.type == Event.COMPLETE)
 			{
-			    trace("Data loaded.");
+//			    trace("Data loaded.");
 			    parsingData(XML(event.target.data))
 //			    trace(myLoader.data.toString());
 			}
@@ -70,7 +69,7 @@
 				return;
 			}
 			
-			trace(product.name());
+//			trace(product.name());
 			// save loaded data to local diskDrive 
 			saveLoadedData(product);
 			
@@ -169,7 +168,7 @@
 		
 		private function showSelectedPage(pageName:String):void
 		{
-			trace(pageName);
+//			trace(pageName);
 			var fileName:String = pageName +".html";
 			var newFile:File = File.applicationStorageDirectory.resolvePath(fileName);
 			var fullPath : String = newFile.nativePath;
@@ -188,7 +187,7 @@
 			
 			var selectedItem:String = tree.selectedItem.@name;
 			
-			trace("LOCATION: " + fileName + "   :  " + selectedItem);
+//			trace("LOCATION: " + fileName + "   :  " + selectedItem);
 			if(selectedItem == fileName)
 				return;
 			
@@ -199,7 +198,6 @@
 			{
 				showSelectedPage(selectedItem);
 			}	
-			
 		}
 		
 		private function test(event:Event):void
@@ -212,10 +210,8 @@
 		labelField="@title" showRoot="false" change="{treeChangeHandler(event)}" />
 	<mx:HTML id="html" x="267" y="72" width="362" height="247"
 		locationChange="{pageChangedHandler(event)}"/>
-	<mx:Button x="690" y="71"  label="Load 1-st XML" click="{frstLoadXML()}"/>
-	<mx:Button x="690" y="120" label="Load 2-nd XML"/>
-	<mx:Button x="690" y="171" label="back" click="{html.historyBack()}"/>
-	<mx:Button x="690" y="230" label="forvatd" click="{html.historyForward()}"/>
-	<mx:Button x="690" y="281" label="Test" click="{test(event)}"/>
+	<mx:Button x="267" y="42" label="back" click="{html.historyBack()}"/>
+	<mx:Button x="328" y="42" label="forvatd" click="{html.historyForward()}"/>
+	<mx:Button x="258" y="327" label="Test" click="{test(event)}"/>
 	
 </mx:WindowedApplication>
